[project]
name = "azursmartmix-control"
version = "0.1.0"
description = "AzurSmartMix Control Plane (read-only) - FastAPI + NiceGUI"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.30.6",
  "nicegui==2.7.0",
  "httpx==0.27.2",
  "pydantic==2.10.2",
  "pydantic-settings==2.6.1",
  "PyYAML==6.0.2",
  "docker==7.1.0",
  "python-json-logger==2.0.7",
]

[tool.uvicorn]
factory = false
